Fix: Loading placeholder size on firefox

--- a/packages/core/app/styles/navi-core/components/navi-loader.less
+++ b/packages/core/app/styles/navi-core/components/navi-loader.less
@@ -12,13 +12,7 @@
   }
 
   &__spinner {
-    align-items: center;
-    background-color: @navi-container-gray;
-    display: flex;
-    flex: 1;
-    height: 300px;
-    justify-content: center;
-    width: 100%;
+    .spinner;
   }
 
   &__bounce {
